--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,11 @@ input:active{
 }
 /*NATIVE CLASSES----------------------------------------------------------------------------------------------------------------*/
 
+.button.is-medium {
+    padding-left: 119px!important;
+    padding-right: 119px!important;
+}
+
 .section{
     padding-top: 76px;
     padding-bottom: 76px;
